# Cranelift_RustScript

./: .gitignore  CHANGELOG_AND_INTEGRATION.md  Cargo.toml  INTEGRATION_REPORT.md  MKL_GUIDE.md  PROJECT_GUIDE.md  README.md  RUST_RAII_MEMORY_DESIGN.md  build.bat  build.rs  how --stat 538bef0 --no-color'
.cargo/: config.toml
.github/workflows/: ci.yml
.trae/documents/: Extend Cranelift JIT Demo Type System.md  移除 nalgebra 并集成 Intel MKL 到 JIT 环境.md
benches/: jit_bench.rs
docs/: MEMORY_RECLAMATION.md  PROJECT_GUIDE.md  architecture.md  dynamic_array_tutorial.md  raii-scope-merge-plan.md  toy-compiler-report-v1.1.md
examples/: README.md  all_features.toy  array_basic.toy  array_iteration.toy  array_resize.toy  cos.toy  matrix_mkl.toy  ownership_demo.toy  ownership_errors.toy  scope_demo.toy  sin.toy
memory_bench/: Cargo.toml  README.md
memory_bench/benches/: bench_mimalloc.rs  bench_system.rs
memory_bench/raii_demo/: valgrind_test.sh
memory_bench/raii_demo/benches/: bench_vec.rs
memory_bench/raii_demo/examples/: basic.rs  exception_safety.rs
memory_bench/raii_demo/src/: lib.rs
memory_bench/raii_demo/src/tests/: mod.rs
memory_bench/src/: lib.rs
raii_demo/: Cargo.toml  miri_test.sh  valgrind_test.sh
raii_demo/examples/: concurrency.rs
raii_demo/src/: lib.rs
sample_app/: Cargo.toml
sample_app/src/: main.rs
src/: ast.rs  frontend.rs  grammar.rs  jit.rs  lib.rs  main.rs  optimizer.rs  ownership.rs  type_checker.rs
src/cli/: mod.rs
src/runtime/: array.rs  extern_functions.rs  io.rs  math.rs  mkl.rs  mod.rs  registry.rs  string.rs
tests/: integration_test.rs  type_checker_test.rs
