[package]
name = "rustscript"  # 可以改为你的项目名称
version = "0.1.0"
edition = "2021"     # 建议使用 2021 稳定版，除非你明确需要 2024

[dependencies]
peg = "0.8.2"

cranelift = "0.125.3"
cranelift-module = "0.125.3"
cranelift-jit = "0.125.3"
cranelift-native = "0.125.3"
cranelift-frontend = "0.125.3"

anyhow = "1.0"
thiserror = "1.0"