[package]
name = "cranelift-jit-demo"
version = "0.0.0"
authors = ["The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/cranelift-jit-demo"
description = "Toy language implemented using cranelift-jit"
edition = "2024"

[dependencies]
peg = "0.8.1"
cranelift = "0.125.3"
cranelift-module = "0.125.3"
cranelift-jit = "0.125.3"
cranelift-native = "0.125.3"
libc = "0.2.180"
rand = "0.9.2"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-seq"], optional = true }
raii_demo = { path = "memory_bench/raii_demo" }

[features]
default = []
mkl = ["dep:intel-mkl-src"]
gpu = []

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "jit_bench"
harness = false
