# ⚠ 此 crate 已从主项目中解耦，不再参与编译。
# 主项目的动态数组已改用 std::vec::Vec（见 src/runtime/array.rs）。
# 此目录保留作为 RAII 手工实现的参考代码，如需恢复依赖，
# 在主项目 Cargo.toml 中添加：raii_demo = { path = "raii_demo" }
[package]
name = "raii_demo"
version = "0.1.0"
edition = "2021"
authors = ["Trae Assistant"]
description = "A memory-safe dynamic array implementation based on RAII principles."
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/zqrxiangxueIt/Cranelift_RustScript"

[dependencies]

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
crossbeam = "0.8"

[[bench]]
name = "bench_vec"
harness = false

[profile.dev]
overflow-checks = true

[profile.release]
lto = true
opt-level = 3

[lib]
name = "raii_demo"
path = "src/lib.rs"
